update: implemented logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
         <button id="check-number">Check Number</button>
 
+        <textarea name="Output" id="output" cols="30" rows="10" disabled></textarea>
+
     </div>
 
     <script src="app.js"></script>
