--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Is your birthday lucky?🥳</h1>
@@ -13,11 +14,11 @@
         <input type="date" id="date-of-birth" />
 
         <label for="lucky-number">Lucky Number</label>
-        <input type="number" id="lucky-number" />
+        <input id="lucky-number" type="number" />
 
         <button id="check-number">Check Number</button>
 
-        <textarea name="Output" id="output" cols="30" rows="10" disabled></textarea>
+        <textarea name="Output" id="output" cols="30" rows="5" disabled></textarea>
 
     </div>
 
