added privacy note

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     </div>
 
+    <footers>
+        <p class="footer">Privacy note: We do not store any of your data.</p>
+    </footer>
+
     <script src="app.js"></script>
 </body>
 </html>
